fix chat input file new line by allow user enter shift + enter and get a new line

--- a/feather_ai_project/static/Css/chat-feather.css
+++ b/feather_ai_project/static/Css/chat-feather.css
@@ -242,10 +242,12 @@
     justify-content: flex-start;
     gap: 1rem;
     border: 1px solid var(--color-white-3);
+    background-color: var(--color-dark-3);
     border-radius: 3rem;
     padding: 1.5rem;
     position: sticky;
     bottom: 0;
+    box-shadow: -1.5rem -1rem 6rem 1rem var(--color-dark-3);
 }
 
 .input-chat #mic {
@@ -253,10 +255,12 @@
     cursor: pointer;
 }
 
-.input-chat input {
+.input-chat #inputChat {
     all: unset;
     width: 80%;
     font-size: 1.8rem;
+    height: 2rem;
+    max-height: 10rem;
 }
 
 .input-chat .sent {
