--- a/static/Css/recentActivity.css
+++ b/static/Css/recentActivity.css
@@ -55,6 +55,7 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+    color: white;
 }
 
 .previous-requests .requests > div:nth-of-type(1) {
@@ -92,3 +93,25 @@
 .previous-requests .requests > div:nth-of-type(2) .details img {
     width: 1.9rem;
 }
+
+.pagination {
+    text-align: end;
+  }
+  
+  .pagination a {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid var(--color-main);
+    margin: 0 5px;
+    text-decoration: none;
+    color: #efefef;
+  }
+  
+  .pagination .current-page {
+    background-color:  var(--color-main);
+    color: #fff;
+  }
