--- a/static/Css/savedCopies.css
+++ b/static/Css/savedCopies.css
@@ -111,6 +111,8 @@
     gap: 1.2rem;
     margin-bottom: 1rem;
     cursor: pointer;
+    position: relative;
+
 }
 
 
@@ -237,4 +239,18 @@ gap: 1rem;
     height: 100%;
     color: #96979a;
     text-align: center;
+}
+
+
+.submit_btn{
+    background: none;
+    border: none;
+    color: var(--color-white-2);
+    font-size: 1.4rem;
+    display: flex;
+    gap: 10px;
+}
+.submit_btn:hover{
+    color: rgb(246, 108, 108);
+    
 }
